@@ -6,21 +6,21 @@
 *
 * File: language/english/blocks.php
 *
-* @copyright		http://www.xoops.org/ The XOOPS Project
-* @copyright		XOOPS_copyrights.txt
-* @copyright		http://www.impresscms.org/ The ImpressCMS Project
+* @copyright	http://www.xoops.org/ The XOOPS Project
+* @copyright	XOOPS_copyrights.txt
+* @copyright	http://www.impresscms.org/ The ImpressCMS Project
 * @license		http://www.gnu.org/licenses/old-licenses/gpl-2.0.html GNU General Public License (GPL)
 * ----------------------------------------------------------------------------------------------------------
-* @package		WF-Links 
-* @since			1.03
+* @package		WF-Links
+* @since		1.03
 * @author		John N
 * ----------------------------------------------------------------------------------------------------------
-* @package		WF-Links 
-* @since			1.03b and 1.03c
+* @package		WF-Links
+* @since		1.03b and 1.03c
 * @author		McDonald
 * ----------------------------------------------------------------------------------------------------------
 * @package		imLinks
-* @since			1.00
+* @since		1.00
 * @author		McDonald
 * @version		$Id$
 */
@@ -31,7 +31,7 @@ define( '_MB_IMLINKS_FILES', 'Links' );
 define( '_MB_IMLINKS_CHARS', 'Length of the title' );
 define( '_MB_IMLINKS_LENGTH', 'characters' );
 
-// Version 1.05 RC5
+// Version 1.05
 define( '_MB_IMLINKS_ID', 'ID' );
 define( '_MB_IMLINKS_CLIENT', 'Client name' );
 define( '_MB_IMLINKS_BANNERID', 'Banner ID' );
@@ -42,4 +42,14 @@ define( '_MB_IMLINKS_CATTITLE', 'Category' );
 define( '_MB_IMLINKS_UNLIMIT', 'Unlimited' );
 define( '_MB_IMLINKS_DATEFORMAT', 'Date format' );
 define( '_MB_IMLINKS_DATEFORMATMANUAL', 'See <a href="http://jp.php.net/manual/en/function.date.php" target="_blank">PHP manual</a>' );
+
+// Version 1.12
+define( '_MB_IMLINKS_SUBMITTER', 'Submitter' );
+define( '_MB_IMLINKS_PUBLISHER', 'Publisher' );
+define( '_MB_IMLINKS_DATE', 'Date' );
+define( '_MB_IMLINKS_COUNTRY', 'Country' );
+define( '_MB_IMLINKS_HITS', 'Hits' );
+define( '_MB_IMLINKS_NOTSPECIFIED', 'Not specified' );
+define( '_MB_IMLINKS_VIEWDETAILS', 'View Full Details' );
+define( '_MB_IMLINKS_ADMINSECTION', 'Administration' );
 ?>
